<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/card_background"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="@color/dark_endColor"
            android:gravity="center"
            android:layout_margin="5dp"
            android:text="@string/spinner_unit"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:id="@+id/rgGender"
            android:gravity="center"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:textStyle="bold"
                android:textColor="@color/dark_centerColor"
                android:id="@+id/rbMeter"
                android:layout_height="wrap_content"
                android:text="@string/Meter"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/dark_centerColor"
                android:padding="5dp"
                android:id="@+id/rbFoot"
                android:text="@string/Foot"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textStyle="bold"
                android:textColor="@color/dark_centerColor"
                android:id="@+id/rbYard"
                android:text="@string/Yard"/>
        </RadioGroup>

    </LinearLayout>

</LinearLayout>