<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ttw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/black"
        android:padding="5dp"
        android:text="@string/plz_wait"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="gone" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ttw"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_khasara_detail" />

    <RelativeLayout
        android:id="@+id/screen_share"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/install_app"
        android:layout_below="@+id/adView">


        <WebView
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/share"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/install_app"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:orientation="vertical"
        android:focusable="true">

        <ImageView
            android:id="@+id/share_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/ic_share"
            android:scaleType="centerCrop"
            android:padding="20dp"
            android:contentDescription="@string/content_description" />

        <TextView
            android:id="@+id/share_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transperent"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/share_it"
            android:textColor="@color/black"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/install_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/iv_village_web_view"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="false"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_village_app" />

            <TextView
                android:id="@+id/tv_village_web_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/iv_village_web_view"
                android:text="@string/dialog_village_title"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_village_description_web_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_village_web_view"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/iv_village_web_view"
                android:text="@string/village_web_view_description"
                android:textColor="@color/white"
                android:textSize="14sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/layer_list_round_tv_black_background"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/install_app_web_view"
                android:textAllCaps="true"
                android:textColor="@color/app_background"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/layer_list_round_tv_blue_background"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="AD"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>