<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_village"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/main_white">

    <ImageView
        android:id="@+id/iv_ad_banner"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_ad1_village" />


    <ImageView
        android:id="@+id/iv_dialog_village_icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_below="@+id/iv_ad_banner"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_village_app" />

    <TextView
        android:id="@+id/tv_dialog_village_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_ad_banner"
        android:layout_marginTop="8dp"
        android:layout_marginRight="4dp"
        android:layout_toRightOf="@+id/iv_dialog_village_icon"
        android:text="@string/dialog_village_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_dialog_village_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_dialog_village_title"
        android:layout_marginRight="4dp"
        android:layout_toRightOf="@+id/iv_dialog_village_icon"
        android:paddingRight="16dp"
        android:text="@string/dialog_village_description1"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_dialog_village"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_dialog_village_description"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_village_install_now"
        android:textColor="@color/color_a2"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/btn_dialog_village_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_close_black_24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/layer_list_round_tv_white_background"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="AD"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold" />


</RelativeLayout>