<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_name"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:paddingLeft="50dp"
        android:textColor="@color/black"
        android:textSize="@dimen/detail_body_text_size"
        android:layout_alignParentTop="true"
        android:text="@string/app_name"/>

    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bu1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:layout_below="@id/app_name"
        app:cardCornerRadius="12dp"
        android:layout_weight="1"
        android:clickable="true"
        app:cardElevation="8dp"
        android:layout_margin="10dp"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_land"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/ttv"
                android:gravity="center"
                android:text="@string/menu1"
                android:textColor="@color/dark_endColor"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bu6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        android:clickable="true"
        app:cardElevation="8dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/bu1"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="5dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/icon1"
                android:layout_marginLeft="10dp"
                android:contentDescription="content_description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/ttv6"
                android:gravity="center"
                android:text="@string/menu6"
                android:textColor="@color/dark_endColor"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/bu6"
        android:id="@+id/linear1">

        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/bu4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            android:layout_weight="1"
            android:clickable="true"
            app:cardElevation="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:padding="16dp"
                    android:src="@drawable/icon3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/menu4"
                    android:textColor="@color/dark_endColor"
                    android:textSize="10sp"
                    android:maxLines="2"
                    android:minLines="2"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/bu2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            android:layout_weight="1"
            android:clickable="true"
            app:cardElevation="8dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:padding="16dp"
                    android:src="@drawable/icon2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/menu2"
                    android:textColor="@color/dark_endColor"
                    android:textSize="10sp"
                    android:maxLines="2"
                    android:minLines="2"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/bu5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            android:layout_weight="1"
            android:clickable="true"
            app:cardElevation="8dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:padding="16dp"
                    android:src="@drawable/icon5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/menu5"
                    android:textColor="@color/dark_endColor"
                    android:textSize="10sp"
                    android:maxLines="2"
                    android:minLines="2"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/bu3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            android:layout_weight="1"
            android:clickable="true"
            app:cardElevation="8dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:padding="16dp"
                    android:src="@drawable/icon4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/menu3"
                    android:textColor="@color/dark_endColor"
                    android:textSize="10sp"
                    android:maxLines="2"
                    android:minLines="2"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_below="@id/linear1"
        ads:adSize="MEDIUM_RECTANGLE"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_alignParentBottom="true"
        ads:adUnitId="@string/banner_main_menu" />

</RelativeLayout>

